--- a/pom.xml
+++ b/pom.xml
@@ -18,19 +18,18 @@
     </properties>
 
     <dependencies>
-        <!-- Testing support -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-
         <!-- Servlets support -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
+        </dependency>
+
+        <!-- JDBC support -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.43</version>
         </dependency>
 
         <!-- JSTL support -->
@@ -48,13 +47,6 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- JDBC support -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.43</version>
-        </dependency>
-
         <!-- Logging support -->
         <dependency>
             <groupId>log4j</groupId>
@@ -62,6 +54,20 @@
             <version>1.2.17</version>
         </dependency>
 
+        <!-- Testing support -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
