Localization bugs are fixed.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,9 +10,46 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/view/jsp/general/error_404.jsp</location>
+    </error-page>
+    <error-page>
+        <exception-type>java.lang.Exception</exception-type>
+        <location>/WEB-INF/view/jsp/general/error.jsp</location>
+    </error-page>
+
     <session-config>
         <session-timeout>30</session-timeout>
     </session-config>
+
+    <servlet>
+        <servlet-name>Controller</servlet-name>
+        <servlet-class>ua.company.myroniuk.controller.Controller</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Controller</servlet-name>
+        <url-pattern>/phone_station/account_refill</url-pattern>
+        <url-pattern>/phone_station/block_user</url-pattern>
+        <url-pattern>/phone_station/debtors</url-pattern>
+        <url-pattern>/phone_station/delete_user</url-pattern>
+        <url-pattern>/phone_station/invoices</url-pattern>
+        <url-pattern>/phone_station/language</url-pattern>
+        <url-pattern>/phone_station/login</url-pattern>
+        <url-pattern>/phone_station/logout</url-pattern>
+        <url-pattern>/phone_station/new_users</url-pattern>
+        <url-pattern>/phone_station/pay_invoice</url-pattern>
+        <url-pattern>/phone_station/profile</url-pattern>
+        <url-pattern>/phone_station/register_user</url-pattern>
+        <url-pattern>/phone_station/registration</url-pattern>
+        <url-pattern>/phone_station/successful_registration</url-pattern>
+        <url-pattern>/phone_station/services</url-pattern>
+        <url-pattern>/phone_station/switch_off_service</url-pattern>
+        <url-pattern>/phone_station/switch_on_service</url-pattern>
+        <url-pattern>/phone_station/unblock_user</url-pattern>
+        <url-pattern>/phone_station/user_invoices</url-pattern>
+        <url-pattern>/phone_station/users</url-pattern>
+    </servlet-mapping>
 
     <description>MySQL</description>
     <resource-ref>
