--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,22 +6,55 @@
 		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
+    <description>MySQL</description>
+    <resource-ref>
+        <description>MySQL DB Connection Pool</description>
+        <res-ref-name>jdbc/phone_station</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 
     <error-page>
         <error-code>404</error-code>
         <location>/WEB-INF/view/jsp/general/error_404.jsp</location>
     </error-page>
+
     <error-page>
         <exception-type>java.lang.Exception</exception-type>
         <location>/WEB-INF/view/jsp/general/error.jsp</location>
     </error-page>
 
-    <session-config>
-        <session-timeout>30</session-timeout>
-    </session-config>
+    <filter>
+        <filter-name>RedirectionFilter</filter-name>
+        <filter-class>ua.company.myroniuk.controller.filter.RedirectionFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>RedirectionFilter</filter-name>
+        <url-pattern>/index.jsp</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>EncodingFilter</filter-name>
+        <filter-class>ua.company.myroniuk.controller.filter.EncodingFilter</filter-class>
+        <init-param>
+            <description>Encoding parameter</description>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>EncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>SecurityFilter</filter-name>
+        <filter-class>ua.company.myroniuk.controller.filter.SecurityFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>SecurityFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <servlet>
         <servlet-name>Controller</servlet-name>
@@ -51,11 +84,12 @@
         <url-pattern>/phone_station/users</url-pattern>
     </servlet-mapping>
 
-    <description>MySQL</description>
-    <resource-ref>
-        <description>MySQL DB Connection Pool</description>
-        <res-ref-name>jdbc/phone_station</res-ref-name>
-        <res-type>javax.sql.DataSource</res-type>
-        <res-auth>Container</res-auth>
-    </resource-ref>
+    <session-config>
+        <session-timeout>30</session-timeout>
+    </session-config>
+
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+
 </web-app>
